# See https://nens-meta.readthedocs.io/en/latest/config-files.html
[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rana-process-sdk"
version = "0.1.dev0"
description = "The Software Development Kit for creating Rana processes."
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = "MIT"
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.12"
dependencies = []

[project.urls]
homepage = "https://github.com/nens/rana-process-sdk"

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=80"

[tool.zest-releaser]
release = false

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py312"

[tool.ruff.lint]
# Default select: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["rana_process_sdk"]

[tool.pyright]
# Pyright/pylance/vscode configuration.
# Note: if you want a different setup, you can overwrite this with a
# "pyrightconfig.json", which takes precedence.
include = "src"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=6.3.0", "pytest-sugar>=1.1.1"]
